examples/negative/pub_enforcement/priv_field_external_construct/lib.kai
# Library module: declares `Box` with a `priv` field. The constructor
# `make_box` lives inside the module so it has access; external code
# must go through it (or any other fn the module exposes) instead of
# constructing `Box { secret: … }` directly.

pub type Box = { priv secret: Int }

pub fn make_box(n: Int) : Box = Box { secret: n }

pub fn placeholder() : Int = 0
